SCR #386556 - fix: profile submenu width bug on mobile devices

--- a/src/modules/menu/components/profile-menu/styles/themes/_submenu.scss
+++ b/src/modules/menu/components/profile-menu/styles/themes/_submenu.scss
@@ -1,4 +1,5 @@
 .wlc-profile-menu.wlc-profile-menu--type-submenu:host {
+    min-width: 0;
 
     .wlc-profile-menu__content {
         position: relative;
